[gd_scene load_steps=4 format=3 uid="uid://cys0bg6rmf3xl"]

[ext_resource type="PackedScene" uid="uid://chl3ioonxrxu3" path="res://scenes/map.tscn" id="1_uwrxv"]
[ext_resource type="Script" uid="uid://bbthmgy8mpdso" path="res://scenes/game.gd" id="1_yqjtg"]
[ext_resource type="Resource" uid="uid://nyc375015liw" path="res://assets/scenarios/Demo/map/start.tres" id="3_lnu2h"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqjtg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MapContainer" type="SubViewportContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Map" parent="VBoxContainer/MapContainer" instance=ExtResource("1_uwrxv")]
unique_name_in_owner = true
handle_input_locally = false
render_target_update_mode = 4
region = ExtResource("3_lnu2h")

[node name="Tools" type="HFlowContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 12
toggle_mode = true
button_pressed = true
text = "Toggle Grid"

[connection signal="missing_tools" from="VBoxContainer/MapContainer/Map" to="." method="missing_tools"]
[connection signal="show_action" from="VBoxContainer/MapContainer/Map" to="." method="show_action"]
[connection signal="update_tools" from="VBoxContainer/MapContainer/Map" to="." method="update_tools"]
[connection signal="toggled" from="VBoxContainer/Button" to="." method="_on_grid_toggled"]
